Add game mechanics and rendering classes
Updated CMakeLists.txt to include new source files for
player control, display, food management, and game logic.
Refactored Snake_SFML.cpp to utilize the new Display class
for rendering. Expanded game.h with new classes for Board,
Snake, Food, PlayerController, and Display. Implemented
movement and growth logic in Snake class. Created
Display class for rendering game elements and added
Food and PlayerController classes for game functionality.

--- a/Snake_SFML/CMakeLists.txt
+++ b/Snake_SFML/CMakeLists.txt
@@ -12,12 +12,18 @@ set(SFML_CLASS
 set(GAME_CLASSES 
 
     classes/common.h
-
     classes/snake.cpp
     classes/snake.h
     classes/random.h
     classes/game.h
-    classes/game.cpp)
+    classes/game.cpp 
+    classes/playerController.h 
+    classes/playerController.cpp
+    classes/display.cpp
+    classes/display.h
+    classes/food.h
+    classes/food.cpp 
+    classes/board.h)
 
 
 # Add source to this project's executable.
