Enhance display functionality with score rendering
Added a new resource directory for fonts in CMake and implemented a custom command to copy the font files post-build. Modified the `main` function and the `renderGame` function in the `Display` class to include a score parameter, allowing for score rendering during gameplay. Introduced a new `renderScore` function to display the score on the window and added a character size constant for text rendering. Enhanced the `Display` class constructor to load the font from a specified file, ensuring proper text display.

--- a/Snake_SFML/CMakeLists.txt
+++ b/Snake_SFML/CMakeLists.txt
@@ -55,4 +55,10 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 set_property(TARGET Snake_SFML PROPERTY CXX_STANDARD 17)
 set_property(TARGET Snake_SFML PROPERTY CXX_STANDARD_REQUIRED ON)
 
-# TODO: Add tests and install targets if needed.
+
+set(RESOURCES_POLICE_DIR "${CMAKE_SOURCE_DIR}/Snake_SFML/police")
+
+add_custom_command(TARGET Snake_SFML POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${RESOURCES_POLICE_DIR} $<TARGET_FILE_DIR:Snake_SFML>/police
+)
