Refactor game structure and improve rendering
- Updated CMakeLists.txt to include board class.
- Refactored Snake_SFML.cpp to use smart pointers for game objects.
- Modified Display class to accept sf::RenderWindow for rendering.
- Added createWindow function in Game class for window initialization.
- Updated Game's update method to handle user input events.
- Enhanced PlayerController to integrate with SFML event system.
- Introduced Board class for collision detection.
- Updated display.h to reflect method signature changes.
- Overall improvements for modularity and code management.

--- a/Snake_SFML/CMakeLists.txt
+++ b/Snake_SFML/CMakeLists.txt
@@ -23,7 +23,8 @@ set(GAME_CLASSES
     classes/display.h
     classes/food.h
     classes/food.cpp 
-    classes/board.h)
+    classes/board.h
+    classes/board.cpp)
 
 
 # Add source to this project's executable.
