Add menu system and replay functionality
Updated CMakeLists.txt to include new menu source files.
Modified Snake_SFML.cpp to implement a game loop with replay capability and integrated a Menu object for user interactions.
Enhanced Game::run() for better menu navigation and rendering.
Updated Game constructor to accept a Menu object.
Refactored PlayerController's getInput method for direct key event handling.
Introduced a new Menu class for managing menu navigation and selections, with its definition added in menu.h.

--- a/Snake_SFML/CMakeLists.txt
+++ b/Snake_SFML/CMakeLists.txt
@@ -24,7 +24,10 @@ set(GAME_CLASSES
     classes/food.h
     classes/food.cpp 
     classes/board.h
-    classes/board.cpp)
+    classes/board.cpp
+    classes/menu.cpp
+    classes/menu.h
+)
 
 
 # Add source to this project's executable.
