--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Snake_SFML/classes/menu.cpp
+/Snake_SFML/classes/menu.h
